@@ -91,6 +91,13 @@ void flext_dsp::dspmeth(fts_word_t *w)
 t_int *flext_dsp::dspmeth(t_int *w) 
 { 
 	flext_dsp *obj = (flext_dsp *)w[1];
+#ifdef FLEXT_DEBUG
+	if(!obj->thisHdr()) {
+		// object is already deleted!
+		ERRINTERNAL();
+		return w+3;
+	}
+#endif
 #if FLEXT_SYS == FLEXT_SYS_MAX
 	if(!obj->thisHdr()->z_disabled) 
 #else
